objects/pse__Project_Versioning_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that control aspects of Project Versioning and Baselines at a user or profile level.</description>
    <fields>
        <fullName>pse__Notifications_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Project Version batch processes are sent via Chatter to recipients listed in the Notifications Recipients setting. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Project Version batch processes are sent via Chatter to recipients listed in the Notifications Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Project Version batch processes are sent via email to recipients listed in the Notifications Recipients setting. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Project Version batch processes are sent via email to recipients listed in the Notifications Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Recipients__c</fullName>
        <description>Specifies the notification recipients for Project Version batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</description>
        <inlineHelpText>Specifies the notification recipients for Project Version batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</inlineHelpText>
        <label>Notifications_Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Project Version batch processes are sent via tasks. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Project Version batch processes are sent via tasks. This is deselected by default.</inlineHelpText>
        <label>Notifications Task</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Versioning Settings</label>
</CustomObject>